# rendezvous-client

./: Cargo.toml  README.md
src/: discover_once.rs  lib.rs  register_once.rs  register_repetitive.rs
