[package]
name = "rendezvous-client"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "registration"
path = "src/register_once.rs"

[[bin]]
name = "repetitive"
path = "src/register_repetitive.rs"

[[bin]]
name = "discovery"
path = "src/discover_once.rs"

[dependencies]
anyhow = "1"
futures = { version = "0.3", default-features = false }
libp2p = { git = "https://github.com/comit-network/rust-libp2p.git", branch = "rendezvous", default-features = false, features = [ "rendezvous", "tcp-tokio", "yamux", "mplex", "dns-tokio", "noise", "ping", "websocket" ] }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = [ "rt-multi-thread", "time", "macros", "sync", "process", "fs", "net", "io-util" ] }
